Develop a role based authentication system and relevant dashboards

--- a/.env
+++ b/.env
@@ -1,2 +1,17 @@
-REACT_APP_API_URL=http://localhost:5000/api
-REACT_APP_FRONTEND_URL=http://localhost:3000
+SECRET_KEY=your-secret-key-here-for-hackathon
+JWT_SECRET_KEY=your-jwt-secret-key-here
+DATABASE_URL=sqlite:///hackathon.db
+UPLOAD_FOLDER=uploads
+
+# Email Configuration (optional)
+MAIL_SERVER=smtp.gmail.com
+MAIL_PORT=587
+MAIL_USE_TLS=true
+MAIL_USERNAME=
+MAIL_PASSWORD=
+MAIL_DEFAULT_SENDER=
+
+# Celery Configuration (optional)
+CELERY_BROKER_URL=redis://localhost:6379/0
+CELERY_RESULT_BACKEND=redis://localhost:6379/0
+SQLALCHEMY_DATABASE_URI = "sqlite:///hackathon.db"
